Ignore Grass Files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 venv/
+Plane AI/Assets/TerrainTexturesPackFree/TerrainTextures/GrassUV01.png
+Plane AI/Assets/TerrainTexturesPackFree/TerrainTextures/GrassUV01.png.meta
+Plane AI/Assets/TerrainTexturesPackFree/TerrainTextures/GrassUV01_N.png
+Plane AI/Assets/TerrainTexturesPackFree/TerrainTextures/GrassUV01_N.png.meta
+Plane AI/Assets/TerrainTexturesPackFree/TerrainTextures/GrassUV02.png
+Plane AI/Assets/TerrainTexturesPackFree/TerrainTextures/GrassUV02.png.meta
+Plane AI/Assets/TerrainTexturesPackFree/TerrainTextures/GrassUV02_N.png
+Plane AI/Assets/TerrainTexturesPackFree/TerrainTextures/GrassUV02_N.png.meta
